fix spacing

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -5,17 +5,6 @@
   color: #585764;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .Social-link {
   margin: 0px 10px 0px 10px;
 }
@@ -109,7 +98,6 @@ p {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-right: 5px;
 }
 
 .Navbar .Subtitle {
@@ -119,52 +107,56 @@ p {
 }
 
 
-@media only screen and (max-width: 890px) {
+@media (max-width: 890px) {
+  .App {
+    margin: 0px;
+    padding-right: 50px;
+    padding-left: 50px;
+    width: 100%;
+  }
   .Body {
     flex-direction: column;
     width: 100%;
-    margin-right: 0px;
   }
   .Header {
-    margin-left: 30px;
     padding-top: 50px;
-    margin-right: -10px;
+    margin: 0px;
   }
   .Body-image {
     display: none;
   }
   .Col-left {
     width: 100%;
-    padding-left: 30px;
-
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
   }
   .Col-right {
     width: 100%;
-    padding-left: 30px;
-  }
-  .Navbar {
-    padding-left: 30px;
-    margin-bottom: 20px;
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
     padding-right: 0px;
   }
-  .Content-column {
-    padding-left: 30px;
+  .Navbar {
+    margin-bottom: 20px;
   }
+
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 450px) {
   .Col-left h1 {
-    font-size: 48px;
+    font-size: 62px;
   }
   .Col-right h3 {
-    font-size: 24px;
+    font-size: 26px;
     line-height: 48px;
   }
   .Col-right p {
-    font-size: 14px;
+    font-size: 16px;
   }
   .Navbar .Subtitle {
-    font-size: 18px;
-
+    font-size: 20px;
   }
 }
