--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 
 body {
-  margin: 0;
+  margin: 0px;
   background-color: #fffcfc;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
